src/objects/Project_Request_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Allocation__c</fullName>
        <label>Assigned Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assigned_End_Date__c</fullName>
        <label>Assigned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Expert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Expert</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Hours__c</fullName>
        <label>Assigned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Start_Date__c</fullName>
        <label>Assigned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <referenceTo>Assignment__c</referenceTo>
        <relationshipName>Project_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Skills Required</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_ID__c</fullName>
        <label>Opportunity Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Request__c</fullName>
        <label>Work Request</label>
        <referenceTo>Project_Request__c</referenceTo>
        <relationshipLabel>Requested Experts</relationshipLabel>
        <relationshipName>Project_Request_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <globalPicklist>Region</globalPicklist>
        <label>Region</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Allocation__c</fullName>
        <label>Requested Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Requested_End_Date__c</fullName>
        <label>Requested End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Hours__c</fullName>
        <label>Requested Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Rate__c</fullName>
        <label>Requested Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Start_Date__c</fullName>
        <label>Requested Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <globalPicklist>Role</globalPicklist>
        <label>Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requested Expert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Request__c</columns>
        <columns>Role__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Detail__c</columns>
        <columns>Requested_Hours__c</columns>
        <columns>Requested_Start_Date__c</columns>
        <columns>Requested_End_Date__c</columns>
        <columns>Assigned_Expert__c</columns>
        <columns>Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>Requested Expert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requested Experts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assign_Allocation_Required_If_Fulfilled</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
AND( 
ISPICKVAL(Status__c, &quot;Closed&quot;), 
OR( 
ISPICKVAL(Status_Detail__c, &quot;Fulfilled&quot;), 
ISPICKVAL(Status_Detail__c, &quot;Partially Fulfilled&quot;) 
) 
), 
ISBLANK(Assigned_Allocation__c) 
)</errorConditionFormula>
        <errorDisplayField>Assigned_Allocation__c</errorDisplayField>
        <errorMessage>Assigned Allocation is required in order to fulfill a Project Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assigned_End_Date_Required_If_Fulfilled</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  AND(
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    OR(
      ISPICKVAL(Status_Detail__c, &quot;Fulfilled&quot;), 
      ISPICKVAL(Status_Detail__c, &quot;Partially Fulfilled&quot;)
    )
  ),
  ISBLANK(Assigned_End_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Assigned_End_Date__c</errorDisplayField>
        <errorMessage>Assigned End Date is required in order to fulfill a Project Request Detail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assigned_Expert_Required_If_Fulfilled</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  AND(
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    OR(
      ISPICKVAL(Status_Detail__c, &quot;Fulfilled&quot;), 
      ISPICKVAL(Status_Detail__c, &quot;Partially Fulfilled&quot;)
    )
  ),
  ISBLANK(Assigned_Expert__c)
)</errorConditionFormula>
        <errorDisplayField>Assigned_Expert__c</errorDisplayField>
        <errorMessage>Assigned Expert is required in order to fulfill a Project Request Detail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assigned_Hours_Must_Be_In_Quarter_Hours</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
  Assigned_Hours__c &lt; 1,
  AND(
    CONTAINS(TEXT(Assigned_Hours__c), &apos;.&apos;),  
    MID(TEXT(Assigned_Hours__c), FIND(&apos;.&apos;, TEXT(Assigned_Hours__c)) + 1, LEN(TEXT(Assigned_Hours__c))) != &apos;0&apos;,
    MID(TEXT(Assigned_Hours__c), FIND(&apos;.&apos;, TEXT(Assigned_Hours__c)) + 1, LEN(TEXT(Assigned_Hours__c))) != &apos;25&apos;,
    MID(TEXT(Assigned_Hours__c), FIND(&apos;.&apos;, TEXT(Assigned_Hours__c)) + 1, LEN(TEXT(Assigned_Hours__c))) != &apos;5&apos;,
    MID(TEXT(Assigned_Hours__c), FIND(&apos;.&apos;, TEXT(Assigned_Hours__c)) + 1, LEN(TEXT(Assigned_Hours__c))) != &apos;75&apos;
  )
)</errorConditionFormula>
        <errorDisplayField>Assigned_Hours__c</errorDisplayField>
        <errorMessage>Assigned Hours must be greater than 1, and in increments of quarter hours.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assigned_Hours_Required_If_Fulfilled</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  AND(
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    OR(
      ISPICKVAL(Status_Detail__c, &quot;Fulfilled&quot;), 
      ISPICKVAL(Status_Detail__c, &quot;Partially Fulfilled&quot;)
    )
  ),
  ISBLANK(Assigned_Hours__c)
)</errorConditionFormula>
        <errorDisplayField>Assigned_Hours__c</errorDisplayField>
        <errorMessage>Assigned Hours is required in order to fulfill a Project Request Detail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assigned_StartDate_Required_If_Fulfilled</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  AND(
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    OR(
      ISPICKVAL(Status_Detail__c, &quot;Fulfilled&quot;), 
      ISPICKVAL(Status_Detail__c, &quot;Partially Fulfilled&quot;)
    )
  ),
  ISBLANK(Assigned_Start_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Assigned_Start_Date__c</errorDisplayField>
        <errorMessage>Assigned Start Date is required in order to fulfill a Project Request Detail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_Hours_Must_Be_In_Quarter_Hours</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISBLANK( Requested_Allocation__c ),
(OR( 
Requested_Hours__c &lt; 1, 
AND( 
CONTAINS(TEXT(Requested_Hours__c), &apos;.&apos;), 
MID(TEXT(Requested_Hours__c), FIND(&apos;.&apos;, TEXT(Requested_Hours__c)) + 1, LEN(TEXT(Requested_Hours__c))) != &apos;0&apos;, 
MID(TEXT(Requested_Hours__c), FIND(&apos;.&apos;, TEXT(Requested_Hours__c)) + 1, LEN(TEXT(Requested_Hours__c))) != &apos;25&apos;, 
MID(TEXT(Requested_Hours__c), FIND(&apos;.&apos;, TEXT(Requested_Hours__c)) + 1, LEN(TEXT(Requested_Hours__c))) != &apos;5&apos;, 
MID(TEXT(Requested_Hours__c), FIND(&apos;.&apos;, TEXT(Requested_Hours__c)) + 1, LEN(TEXT(Requested_Hours__c))) != &apos;75&apos; 
) 
))
)</errorConditionFormula>
        <errorDisplayField>Requested_Hours__c</errorDisplayField>
        <errorMessage>Requested Hours must be greater than 1, and in increments of quarter hours.</errorMessage>
    </validationRules>
</CustomObject>